--- a/src/views/admin/add-notification.fxml
+++ b/src/views/admin/add-notification.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #FFECB3;" styleClass="btn" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CONTROLLER.admin.AddNotificationController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #FFECB3;" styleClass="btn" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CONTROLLER.admin.AddNotificationController">
     <children>
         <HBox alignment="CENTER" prefHeight="70.0" prefWidth="1085.0" styleClass="btn">
             <VBox.margin>
@@ -54,7 +54,7 @@
             </graphic>
          </JFXButton>
         </HBox>
-        <Label fx:id="titleLabel" alignment="CENTER" prefHeight="26.0" prefWidth="1090.0" textFill="#ff9800">
+        <Label fx:id="titleLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" prefWidth="1259.0" textFill="#ff9800">
             <VBox.margin>
                 <Insets top="20.0" />
             </VBox.margin>
