--- a/src/VIEWS/admin/report-manager.fxml
+++ b/src/VIEWS/admin/report-manager.fxml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import de.jensd.fx.glyphs.materialicons.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import de.jensd.fx.glyphs.materialicons.MaterialIconView?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #FFECB3;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CONTROLLERS.admin.ReportManagerController">
+<StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #FFECB3;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CONTROLLERS.admin.ReportManagerController">
    <children>
       <VBox prefHeight="430.0" prefWidth="630.0" spacing="10.0">
          <children>
@@ -32,7 +36,7 @@
                   </Label>
                   <JFXButton mnemonicParsing="false" prefHeight="60.0" prefWidth="86.0" text="  ">
                      <graphic>
-                        <MaterialIconView fill="#ff9800" glyphName="PRINT" size="40" strokeType="OUTSIDE" strokeWidth="0.0" />
+                        <MaterialIconView fx:id="btnPrint" fill="#ff9800" glyphName="PRINT" size="40" strokeType="OUTSIDE" strokeWidth="0.0" />
                      </graphic>
                   </JFXButton>
                </children>
