--- a/src/VIEWS/client/client_Screen.fxml
+++ b/src/VIEWS/client/client_Screen.fxml
@@ -136,7 +136,7 @@
             </VBox>
             <VBox fx:id="layout2" prefHeight="756.0" prefWidth="1101.0" style="-fx-background-color: #FFECB3;">
                 <StackPane fx:id="main" prefHeight="756.0" prefWidth="1060.0">
-               <HBox fx:id="Home_Screen" style="-fx-background-color: #FFECB3;">
+               <HBox fx:id="home" style="-fx-background-color: #FFECB3;" visible="false">
                   <children>
                             <Pane fx:id="paneHome" prefHeight="755.0" prefWidth="548.0" style="-fx-background-color: #FFECB3;">
                                  <Pane layoutX="22.0" layoutY="415.0" prefHeight="200.0" prefWidth="503.0" style="-fx-background-color: #FFB74D;" stylesheets="@../css/client.css">
@@ -433,7 +433,7 @@
                      </StackPane>
                   </children>
                </HBox>
-                    <StackPane fx:id="Notification_Screen" prefHeight="150.0" prefWidth="200.0" visible="false">
+                    <StackPane fx:id="notification" prefHeight="150.0" prefWidth="200.0" visible="false">
                         <Pane prefHeight="200.0" prefWidth="200.0">
                             <TableView fx:id="tableNotification" layoutX="64.0" layoutY="80.0" prefHeight="660.0" prefWidth="933.0" style="-fx-background-color: #FFECB3; -fx-border-color: #FFA726;" styleClass="tblview">
                                 <columns>
@@ -480,7 +480,7 @@
                      </HBox>
                         </Pane>
                     </StackPane>
-                    <AnchorPane fx:id="Statistic_Screen" prefHeight="754.0" prefWidth="851.0" visible="false">
+                    <AnchorPane fx:id="reports" prefHeight="754.0" prefWidth="851.0" visible="false">
                   <Pane layoutX="14.0" layoutY="201.0" prefHeight="476.0" prefWidth="480.0" style="-fx-background-color: #FFE082; -fx-background-radius: 30;">
                      <children>
                               <LineChart fx:id="lineChart" layoutX="14.0" layoutY="60.0" legendVisible="false" prefHeight="402.0" prefWidth="450.0" styleClass="shadow">
@@ -536,7 +536,7 @@
                      </effect>
                   </Pane>
                     </AnchorPane>
-                    <VBox fx:id="Profile_Screen" prefHeight="200.0" prefWidth="100.0" visible="false">
+                    <VBox fx:id="account" prefHeight="200.0" prefWidth="100.0">
                         <TabPane prefHeight="756.0" prefWidth="1060.0" tabClosingPolicy="UNAVAILABLE">
                             <Tab style="-fx-background-color: #FFCC80;" text="Personal Information">
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
@@ -547,7 +547,7 @@
                                     <JFXTextField fx:id="txtDateRegister" editable="false" layoutX="161.0" layoutY="507.0" prefHeight="46.0" prefWidth="709.0" promptText="Date Register" />
                                     <JFXTextField fx:id="txtNationalID" layoutX="161.0" layoutY="377.0" prefHeight="46.0" prefWidth="709.0" promptText="National ID" />
                                     <JFXTextField fx:id="txtID" layoutX="161.0" layoutY="115.0" prefHeight="46.0" prefWidth="709.0" promptText="ID" />
-                                    <JFXButton layoutX="467.0" layoutY="574.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="90.0" style="-fx-background-color: #FF9800;" text="Save" textFill="WHITE">
+                                    <JFXButton fx:id="btnSaveProfile" layoutX="467.0" layoutY="574.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="90.0" style="-fx-background-color: #FF9800;" text="Save" textFill="WHITE">
                                         <font>
                                             <Font name="Segoe UI Bold" size="24.0" />
                                         </font>
@@ -557,8 +557,7 @@
                                             <ToggleGroup fx:id="gender" />
                                         </toggleGroup>
                                     </JFXRadioButton>
-                                    <JFXRadioButton fx:id="rBtnFemale" layoutX="254.0" layoutY="256.0" mnemonicParsing="false" text="Female" toggleGroup="$gender" />
-                                    <JFXRadioButton fx:id="rBtnOrther" layoutX="351.0" layoutY="256.0" mnemonicParsing="false" text="Orther" toggleGroup="$gender" />
+                                    <JFXRadioButton fx:id="rBtnFemale" layoutX="336.0" layoutY="256.0" mnemonicParsing="false" text="Female" toggleGroup="$gender" />
                                     <Label alignment="CENTER_RIGHT" layoutX="50.0" layoutY="59.0" prefHeight="27.0" prefWidth="80.0" text="Full Name" />
                                     <Label alignment="CENTER_RIGHT" layoutX="66.0" layoutY="189.0" prefHeight="27.0" prefWidth="64.0" text="Number" />
                                     <Label alignment="CENTER_RIGHT" layoutX="66.0" layoutY="125.0" prefHeight="27.0" prefWidth="64.0" text="ID" />
@@ -590,10 +589,10 @@
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                     <TableView fx:id="tblCreditCard" layoutX="45.0" layoutY="96.0" prefHeight="599.0" prefWidth="969.0" style="-fx-background-color: #FFECB3; -fx-border-color: #FFA726;">
                                         <columns>
-                                            <TableColumn fx:id="tblColumnCardHolderName" prefWidth="261.0000114440918" style="-fx-background-color: #FFCC80; -fx-border-color: #FFA726;" text="CardHolderName" />
-                                            <TableColumn fx:id="tblColumnAccountNumber" prefWidth="255.00003051757812" style="-fx-background-color: #FFCC80; -fx-border-color: #FFA726;" text="AccountNumber" />
-                                            <TableColumn fx:id="tblColumnBank" prefWidth="198.5999755859375" style="-fx-background-color: #FFCC80; -fx-border-color: #FFA726;" text="Bank" />
-                                            <TableColumn fx:id="tblColumnStatus" prefWidth="255.20001220703125" style="-fx-background-color: #FFCC80; -fx-border-color: #FFA726;" text="Status" />
+                                            <TableColumn fx:id="tblColumnCardHolderName" prefWidth="247.9999237060547" style="-fx-background-color: #FFCC80; -fx-border-color: #FFA726;" text="CardHolderName" />
+                                            <TableColumn fx:id="tblColumnAccountNumber" prefWidth="226.5999755859375" style="-fx-background-color: #FFCC80; -fx-border-color: #FFA726;" text="AccountNumber" />
+                                            <TableColumn fx:id="tblColumnBank" prefWidth="204.5999755859375" style="-fx-background-color: #FFCC80; -fx-border-color: #FFA726;" text="Bank" />
+                                 <TableColumn fx:id="tblColumnStatus" prefWidth="288.4000244140625" style="-fx-background-color: #FFCC80; -fx-border-color: #FFA726;" text="Status" />
                                         </columns>
                                     </TableView>
                            <HBox layoutX="45.0" layoutY="26.0" prefHeight="52.0" prefWidth="287.0">
@@ -625,7 +624,7 @@
                             </Tab>
                         </TabPane>
                     </VBox>
-                    <Pane fx:id="Invoice_Screen" prefHeight="200.0" prefWidth="200.0" visible="false">
+                    <Pane fx:id="bill" prefHeight="200.0" prefWidth="200.0" visible="false">
                         <Pane layoutX="1.0" layoutY="283.0" prefHeight="476.0" prefWidth="875.0">
                             <Label layoutX="21.0" layoutY="14.0" prefHeight="43.0" prefWidth="397.0" text="Details">
                                 <font>
@@ -686,7 +685,7 @@
                                 </font>
                             </Label>
                             <JFXTextField fx:id="total" layoutX="439.0" layoutY="225.0" />
-                            <JFXButton fx:id="btnpayment" layoutX="322.0" layoutY="329.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="170.0" style="-fx-background-color: #FF9800; -fx-background-radius: 15;" text="Payment" textFill="WHITE" visible="false">
+                            <JFXButton fx:id="checkin" layoutX="322.0" layoutY="329.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="170.0" style="-fx-background-color: #FF9800; -fx-background-radius: 15;" text="Payment" textFill="WHITE" visible="false">
                                 <font>
                                     <Font name="Segoe UI Bold" size="24.0" />
                                 </font>
@@ -710,10 +709,10 @@
                                     <Font name="Segoe UI Bold" size="32.0" />
                                 </font>
                             </Label>
-                            <JFXTextField fx:id="txtInvoiceCardHolderName" layoutX="19.0" layoutY="178.0" prefHeight="43.0" prefWidth="270.0" promptText="Cardholder Name" style="-fx-background-color: #343434;" styleClass="txtfield" />
+                            <JFXTextField fx:id="txtInvoiceCardHolderName" layoutX="19.0" layoutY="176.0" prefHeight="45.0" prefWidth="270.0" promptText="Cardholder Name" style="-fx-background-color: #343434;" styleClass="txtfield" />
                             <JFXTextField fx:id="txtInvoiceCardNumber" layoutX="19.0" layoutY="221.0" prefHeight="43.0" prefWidth="270.0" promptText="CardNumber" style="-fx-background-color: #343434;" styleClass="txtfield" />
                             <JFXTextField fx:id="txtInvoiceAccountNumber" layoutX="19.0" layoutY="264.0" prefHeight="43.0" prefWidth="270.0" promptText="Account Number" style="-fx-background-color: #343434;" styleClass="txtfield" />
-                            <JFXButton fx:id="btncheckout" layoutX="109.0" layoutY="331.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="142.0" style="-fx-background-color: #343434;" text="Checkout" textFill="WHITE">
+                            <JFXButton fx:id="checkout" layoutX="109.0" layoutY="331.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="142.0" style="-fx-background-color: #343434;" text="Checkout" textFill="WHITE">
                                 <font>
                                     <Font size="24.0" />
                                 </font>
@@ -725,6 +724,11 @@
                                     <Cursor fx:constant="HAND" />
                                 </cursor>
                             </JFXButton>
+                     <JFXComboBox fx:id="cbbPaymentBank" focusColor="WHITE" layoutX="14.0" layoutY="109.0" prefHeight="39.0" prefWidth="279.0" stylesheets="@../css/client.css">
+                        <styleClass>
+                           <String fx:value="cell" />
+                           <String fx:value="combo-box" />
+                        </styleClass></JFXComboBox>
                         </Pane>
                     </Pane>
                 </StackPane>
