--- a/src/VIEWS/client/client_Screen.fxml
+++ b/src/VIEWS/client/client_Screen.fxml
@@ -136,7 +136,7 @@
             </VBox>
             <VBox fx:id="layout2" prefHeight="756.0" prefWidth="1101.0" style="-fx-background-color: #FFECB3;">
                 <StackPane fx:id="main" prefHeight="756.0" prefWidth="1060.0">
-               <HBox fx:id="Home_Screen" style="-fx-background-color: #FFECB3;" visible="false">
+               <HBox fx:id="Home_Screen" style="-fx-background-color: #FFECB3;">
                   <children>
                             <Pane fx:id="paneHome" prefHeight="755.0" prefWidth="548.0" style="-fx-background-color: #FFECB3;">
                                  <Pane layoutX="22.0" layoutY="415.0" prefHeight="200.0" prefWidth="503.0" style="-fx-background-color: #FFB74D;" stylesheets="@../css/client.css">
@@ -522,7 +522,7 @@
                      </effect>
                   </Pane>
                     </AnchorPane>
-                    <VBox fx:id="Profile_Screen" prefHeight="200.0" prefWidth="100.0">
+                    <VBox fx:id="Profile_Screen" prefHeight="200.0" prefWidth="100.0" visible="false">
                         <TabPane prefHeight="756.0" prefWidth="1060.0" tabClosingPolicy="UNAVAILABLE">
                             <Tab style="-fx-background-color: #FFCC80;" text="Personal Information">
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
